--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -112,7 +112,7 @@
  	 	},
  	 	"storageMerchant": {
  	 	 	"name": {
- 	 	 	 	"trans": "Loja dos Lee's",
+ 	 	 	 	"trans": "Loja do Lee",
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
